tests/fixtures/errors/datetime_extract_non_datetime.gcl
// Error: extraction function on non-Datetime
param x: Int = 42;
node y: Int = year(@x);
